--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 
-    <script src="script.js" ></script>
+    <script src="script/script-create-container.js" ></script>
+    <script src="script/script-calculator.js"></script>
 </body>
 </html>
